parser/SQLParser.py
# Generated from SQL.g4 by ANTLR 4.5.3
# encoding: utf-8
from antlr4 import *
from io import StringIO



class SQLParser ( Parser ):

    grammarFileName = "SQL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'('", "')'", "','", "'*'", "'.'", 
                     "'-'", "'/'", "'%'", "'+'", "'<'", "'<='", "'>'", "'>='", 
                     "'='", "'=='", "'!='", "'<>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "NUMERIC_LITERAL", 
                      "IDENTIFIER", "K_CREATE", "K_ON", "K_SELECT", "K_DISTINCT", 
                      "K_FROM", "K_WHERE", "K_GROUP", "K_BY", "K_HAVING", 
                      "K_INDEX", "K_ORDER", "K_LIMIT", "K_OFFSET", "K_AS", 
                      "K_ASC", "K_DESC", "K_AND", "K_OR", "K_COLUMN", "K_IN", 
                      "K_TABLE", "K_UNIQUE", "K_WITH", "SPACES", "STRING_LITERAL" ]

    RULE_parse = 0
    RULE_statement_list = 1
    RULE_statement = 2
    RULE_create_index_statemnt = 3
    RULE_select_statement = 4
    RULE_result_column = 5
    RULE_table_name = 6
    RULE_ordering_term = 7
    RULE_column_alias = 8
    RULE_database_name = 9
    RULE_index_name = 10
    RULE_indexed_column = 11
    RULE_column_name = 12
    RULE_table_alias = 13
    RULE_name = 14
    RULE_expr = 15
    RULE_literal_value = 16
    RULE_keyword = 17

    ruleNames =  [ "parse", "statement_list", "statement", "create_index_statemnt", 
                   "select_statement", "result_column", "table_name", "ordering_term", 
                   "column_alias", "database_name", "index_name", "indexed_column", 
                   "column_name", "table_alias", "name", "expr", "literal_value", 
                   "keyword" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    NUMERIC_LITERAL=19
    IDENTIFIER=20
    K_CREATE=21
    K_ON=22
    K_SELECT=23
    K_DISTINCT=24
    K_FROM=25
    K_WHERE=26
    K_GROUP=27
    K_BY=28
    K_HAVING=29
    K_INDEX=30
    K_ORDER=31
    K_LIMIT=32
    K_OFFSET=33
    K_AS=34
    K_ASC=35
    K_DESC=36
    K_AND=37
    K_OR=38
    K_COLUMN=39
    K_IN=40
    K_TABLE=41
    K_UNIQUE=42
    K_WITH=43
    SPACES=44
    STRING_LITERAL=45

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ParseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement_list(self):
            return self.getTypedRuleContext(SQLParser.Statement_listContext,0)


        def EOF(self):
            return self.getToken(SQLParser.EOF, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_parse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParse" ):
                listener.enterParse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParse" ):
                listener.exitParse(self)




    def parse(self):

        localctx = SQLParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.statement_list()
            self.state = 37
            self.match(SQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Statement_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.StatementContext)
            else:
                return self.getTypedRuleContext(SQLParser.StatementContext,i)


        def getRuleIndex(self):
            return SQLParser.RULE_statement_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement_list" ):
                listener.enterStatement_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement_list" ):
                listener.exitStatement_list(self)




    def statement_list(self):

        localctx = SQLParser.Statement_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.statement()
            self.state = 40
            self.match(SQLParser.T__0)
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SQLParser.K_CREATE or _la==SQLParser.K_SELECT:
                self.state = 41
                self.statement()
                self.state = 42
                self.match(SQLParser.T__0)
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def create_index_statemnt(self):
            return self.getTypedRuleContext(SQLParser.Create_index_statemntContext,0)


        def select_statement(self):
            return self.getTypedRuleContext(SQLParser.Select_statementContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = SQLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 51
            token = self._input.LA(1)
            if token in [SQLParser.K_CREATE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 49
                self.create_index_statemnt()

            elif token in [SQLParser.K_SELECT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 50
                self.select_statement()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Create_index_statemntContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def K_CREATE(self):
            return self.getToken(SQLParser.K_CREATE, 0)

        def K_INDEX(self):
            return self.getToken(SQLParser.K_INDEX, 0)

        def index_name(self):
            return self.getTypedRuleContext(SQLParser.Index_nameContext,0)


        def K_ON(self):
            return self.getToken(SQLParser.K_ON, 0)

        def table_name(self):
            return self.getTypedRuleContext(SQLParser.Table_nameContext,0)


        def indexed_column(self):
            return self.getTypedRuleContext(SQLParser.Indexed_columnContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_create_index_statemnt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreate_index_statemnt" ):
                listener.enterCreate_index_statemnt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreate_index_statemnt" ):
                listener.exitCreate_index_statemnt(self)




    def create_index_statemnt(self):

        localctx = SQLParser.Create_index_statemntContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_create_index_statemnt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(SQLParser.K_CREATE)
            self.state = 54
            self.match(SQLParser.K_INDEX)
            self.state = 55
            self.index_name()
            self.state = 56
            self.match(SQLParser.K_ON)
            self.state = 57
            self.table_name()
            self.state = 58
            self.match(SQLParser.T__1)
            self.state = 59
            self.indexed_column()
            self.state = 60
            self.match(SQLParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Select_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def K_SELECT(self):
            return self.getToken(SQLParser.K_SELECT, 0)

        def result_column(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.Result_columnContext)
            else:
                return self.getTypedRuleContext(SQLParser.Result_columnContext,i)


        def K_DISTINCT(self):
            return self.getToken(SQLParser.K_DISTINCT, 0)

        def K_FROM(self):
            return self.getToken(SQLParser.K_FROM, 0)

        def K_WHERE(self):
            return self.getToken(SQLParser.K_WHERE, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.ExprContext)
            else:
                return self.getTypedRuleContext(SQLParser.ExprContext,i)


        def K_GROUP(self):
            return self.getToken(SQLParser.K_GROUP, 0)

        def K_BY(self, i:int=None):
            if i is None:
                return self.getTokens(SQLParser.K_BY)
            else:
                return self.getToken(SQLParser.K_BY, i)

        def K_ORDER(self):
            return self.getToken(SQLParser.K_ORDER, 0)

        def ordering_term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.Ordering_termContext)
            else:
                return self.getTypedRuleContext(SQLParser.Ordering_termContext,i)


        def K_LIMIT(self):
            return self.getToken(SQLParser.K_LIMIT, 0)

        def table_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.Table_nameContext)
            else:
                return self.getTypedRuleContext(SQLParser.Table_nameContext,i)


        def K_HAVING(self):
            return self.getToken(SQLParser.K_HAVING, 0)

        def K_OFFSET(self):
            return self.getToken(SQLParser.K_OFFSET, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_select_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_statement" ):
                listener.enterSelect_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_statement" ):
                listener.exitSelect_statement(self)




    def select_statement(self):

        localctx = SQLParser.Select_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_select_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(SQLParser.K_SELECT)
            self.state = 64
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 63
                self.match(SQLParser.K_DISTINCT)


            self.state = 66
            self.result_column()
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SQLParser.T__3:
                self.state = 67
                self.match(SQLParser.T__3)
                self.state = 68
                self.result_column()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 83
            _la = self._input.LA(1)
            if _la==SQLParser.K_FROM:
                self.state = 74
                self.match(SQLParser.K_FROM)

                self.state = 75
                self.table_name()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SQLParser.T__3:
                    self.state = 76
                    self.match(SQLParser.T__3)
                    self.state = 77
                    self.table_name()
                    self.state = 82
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 87
            _la = self._input.LA(1)
            if _la==SQLParser.K_WHERE:
                self.state = 85
                self.match(SQLParser.K_WHERE)
                self.state = 86
                self.expr(0)


            self.state = 103
            _la = self._input.LA(1)
            if _la==SQLParser.K_GROUP:
                self.state = 89
                self.match(SQLParser.K_GROUP)
                self.state = 90
                self.match(SQLParser.K_BY)
                self.state = 91
                self.expr(0)
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SQLParser.T__3:
                    self.state = 92
                    self.match(SQLParser.T__3)
                    self.state = 93
                    self.expr(0)
                    self.state = 98
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 101
                _la = self._input.LA(1)
                if _la==SQLParser.K_HAVING:
                    self.state = 99
                    self.match(SQLParser.K_HAVING)
                    self.state = 100
                    self.expr(0)




            self.state = 115
            _la = self._input.LA(1)
            if _la==SQLParser.K_ORDER:
                self.state = 105
                self.match(SQLParser.K_ORDER)
                self.state = 106
                self.match(SQLParser.K_BY)
                self.state = 107
                self.ordering_term()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SQLParser.T__3:
                    self.state = 108
                    self.match(SQLParser.T__3)
                    self.state = 109
                    self.ordering_term()
                    self.state = 114
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 123
            _la = self._input.LA(1)
            if _la==SQLParser.K_LIMIT:
                self.state = 117
                self.match(SQLParser.K_LIMIT)
                self.state = 118
                self.expr(0)
                self.state = 121
                _la = self._input.LA(1)
                if _la==SQLParser.T__3 or _la==SQLParser.K_OFFSET:
                    self.state = 119
                    _la = self._input.LA(1)
                    if not(_la==SQLParser.T__3 or _la==SQLParser.K_OFFSET):
                        self._errHandler.recoverInline(self)
                    else:
                        self.consume()
                    self.state = 120
                    self.expr(0)




        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Result_columnContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def table_name(self):
            return self.getTypedRuleContext(SQLParser.Table_nameContext,0)


        def expr(self):
            return self.getTypedRuleContext(SQLParser.ExprContext,0)


        def column_alias(self):
            return self.getTypedRuleContext(SQLParser.Column_aliasContext,0)


        def K_AS(self):
            return self.getToken(SQLParser.K_AS, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_result_column

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterResult_column" ):
                listener.enterResult_column(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitResult_column" ):
                listener.exitResult_column(self)




    def result_column(self):

        localctx = SQLParser.Result_columnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_result_column)
        self._la = 0 # Token type
        try:
            self.state = 137
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.match(SQLParser.T__4)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.table_name()
                self.state = 127
                self.match(SQLParser.T__5)
                self.state = 128
                self.match(SQLParser.T__4)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 130
                self.expr(0)
                self.state = 135
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SQLParser.IDENTIFIER) | (1 << SQLParser.K_AS) | (1 << SQLParser.STRING_LITERAL))) != 0):
                    self.state = 132
                    _la = self._input.LA(1)
                    if _la==SQLParser.K_AS:
                        self.state = 131
                        self.match(SQLParser.K_AS)


                    self.state = 134
                    self.column_alias()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Table_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(SQLParser.NameContext,0)


        def database_name(self):
            return self.getTypedRuleContext(SQLParser.Database_nameContext,0)


        def table_alias(self):
            return self.getTypedRuleContext(SQLParser.Table_aliasContext,0)


        def K_AS(self):
            return self.getToken(SQLParser.K_AS, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_table_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTable_name" ):
                listener.enterTable_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTable_name" ):
                listener.exitTable_name(self)




    def table_name(self):

        localctx = SQLParser.Table_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_table_name)
        try:
            self.state = 152
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self._errHandler.sync(self);
                la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
                if la_ == 1:
                    self.state = 139
                    self.database_name()
                    self.state = 140
                    self.match(SQLParser.T__5)


                self.state = 144
                self.name()
                self.state = 149
                self._errHandler.sync(self);
                la_ = self._interp.adaptivePredict(self._input,19,self._ctx)
                if la_ == 1:
                    self.state = 146
                    self._errHandler.sync(self);
                    la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
                    if la_ == 1:
                        self.state = 145
                        self.match(SQLParser.K_AS)


                    self.state = 148
                    self.table_alias()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.name()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Ordering_termContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(SQLParser.ExprContext,0)


        def K_ASC(self):
            return self.getToken(SQLParser.K_ASC, 0)

        def K_DESC(self):
            return self.getToken(SQLParser.K_DESC, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_ordering_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrdering_term" ):
                listener.enterOrdering_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrdering_term" ):
                listener.exitOrdering_term(self)




    def ordering_term(self):

        localctx = SQLParser.Ordering_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ordering_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.expr(0)
            self.state = 156
            _la = self._input.LA(1)
            if _la==SQLParser.K_ASC or _la==SQLParser.K_DESC:
                self.state = 155
                _la = self._input.LA(1)
                if not(_la==SQLParser.K_ASC or _la==SQLParser.K_DESC):
                    self._errHandler.recoverInline(self)
                else:
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Column_aliasContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(SQLParser.IDENTIFIER, 0)

        def STRING_LITERAL(self):
            return self.getToken(SQLParser.STRING_LITERAL, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_column_alias

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumn_alias" ):
                listener.enterColumn_alias(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumn_alias" ):
                listener.exitColumn_alias(self)




    def column_alias(self):

        localctx = SQLParser.Column_aliasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_column_alias)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            _la = self._input.LA(1)
            if not(_la==SQLParser.IDENTIFIER or _la==SQLParser.STRING_LITERAL):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Database_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(SQLParser.NameContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_database_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDatabase_name" ):
                listener.enterDatabase_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDatabase_name" ):
                listener.exitDatabase_name(self)




    def database_name(self):

        localctx = SQLParser.Database_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_database_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Index_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(SQLParser.NameContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_index_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndex_name" ):
                listener.enterIndex_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndex_name" ):
                listener.exitIndex_name(self)




    def index_name(self):

        localctx = SQLParser.Index_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_index_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Indexed_columnContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(SQLParser.NameContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_indexed_column

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndexed_column" ):
                listener.enterIndexed_column(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndexed_column" ):
                listener.exitIndexed_column(self)




    def indexed_column(self):

        localctx = SQLParser.Indexed_columnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_indexed_column)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Column_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(SQLParser.NameContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_column_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumn_name" ):
                listener.enterColumn_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumn_name" ):
                listener.exitColumn_name(self)




    def column_name(self):

        localctx = SQLParser.Column_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_column_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Table_aliasContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(SQLParser.NameContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_table_alias

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTable_alias" ):
                listener.enterTable_alias(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTable_alias" ):
                listener.exitTable_alias(self)




    def table_alias(self):

        localctx = SQLParser.Table_aliasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_table_alias)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(SQLParser.IDENTIFIER, 0)

        def keyword(self):
            return self.getTypedRuleContext(SQLParser.KeywordContext,0)


        def STRING_LITERAL(self):
            return self.getToken(SQLParser.STRING_LITERAL, 0)

        def name(self):
            return self.getTypedRuleContext(SQLParser.NameContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)




    def name(self):

        localctx = SQLParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_name)
        try:
            self.state = 177
            token = self._input.LA(1)
            if token in [SQLParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 170
                self.match(SQLParser.IDENTIFIER)

            elif token in [SQLParser.K_CREATE, SQLParser.K_ON, SQLParser.K_SELECT, SQLParser.K_DISTINCT, SQLParser.K_FROM, SQLParser.K_WHERE, SQLParser.K_GROUP, SQLParser.K_BY, SQLParser.K_HAVING, SQLParser.K_INDEX, SQLParser.K_ORDER, SQLParser.K_LIMIT, SQLParser.K_OFFSET, SQLParser.K_AS, SQLParser.K_ASC, SQLParser.K_DESC, SQLParser.K_AND, SQLParser.K_OR, SQLParser.K_COLUMN, SQLParser.K_IN, SQLParser.K_TABLE, SQLParser.K_UNIQUE, SQLParser.K_WITH]:
                self.enterOuterAlt(localctx, 2)
                self.state = 171
                self.keyword()

            elif token in [SQLParser.STRING_LITERAL]:
                self.enterOuterAlt(localctx, 3)
                self.state = 172
                self.match(SQLParser.STRING_LITERAL)

            elif token in [SQLParser.T__1]:
                self.enterOuterAlt(localctx, 4)
                self.state = 173
                self.match(SQLParser.T__1)
                self.state = 174
                self.name()
                self.state = 175
                self.match(SQLParser.T__2)

            else:
                raise NoViableAltException(self)
